# tree-sitter-viskum

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  buildparser.sh  commit.sh  example-file.vs  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-viskum.h  tree-sitter-viskum.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_viskum/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterViskumTests/: TreeSitterViskumTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
