[package]
name = "tree-sitter-viskum"
description = "The tree sitter parser for the Viskum language"
version = "0.1.0"
authors = ["Tobias Viskum <tobias.t.viskum@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "viskum"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tobiasviskum/tree-sitter-viskum"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
